--- a/templates/program/list.html.twig
+++ b/templates/program/list.html.twig
@@ -1,5 +1,5 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
-    <h1>Program number {{ id }}</h1>
+    <h1 class="text-center text-light">Program number {{ id }}</h1>
 {% endblock %}
