quest 6 relations many-to-one

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,8 +6,8 @@
     {# Run `composer require symfony/webpack-encore-bundle` and uncomment the
     following Encore helpers to start using Symfony UX #}
     <link rel="stylesheet" href="/build/app.css" />
-    <img src="{{ asset('build/./assets/images') }}" alt="" />
-    <img src="{{ asset('build/./assets/images/favicon') }}" alt="" />
+    <img src="{{ asset('build/assets/images') }}" alt="" />
+    <img src="{{ asset('build/assets/images/favicon') }}" alt="" />
     <script src="/build/app.js"></script>
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png" />
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png" />
