--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="/build/app.css" />
     <img src="{{ asset('build/assets/images') }}" alt="" />
     <img src="{{ asset('build/assets/images/favicon') }}" alt="" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,700&family=Roboto+Condensed:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <script src="/build/app.js"></script>
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png" />
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png" />
