--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -1,13 +1,13 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">WILD SERIES</a>
+      <a class="navbar-brand" href="/">WILD SERIES</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-lg-auto">
           <li class="nav-item">
-            <a class="nav-link hover" aria-current="page" href="#">CATEGORIES</a>
+            <a class="nav-link hover" aria-current="page" href="/category/">CATEGORIES</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">ACTEURS</a>
