implémentation de la liste des saison

--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -7,7 +7,7 @@
             <ul class="list-group">
                 <li class="text-light">{{ program.id }}</li>
                 <li class="list-group-bg list-group-color"><a href="/program/show/{{ program.id }}" class="list-group-item list-group-item-action">{{ program.title }}</a></li>
-                <li class="text-light">{{ program.summary }}</li>
+                <li class="text-light">{{ program.synopsis }}</li>
             </ul>
         {% endif %}
     {% endfor %}
