--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -6,13 +6,20 @@
 
 {% block body %}
     <div class="media">
+        {{ dump(seasons)}}
         <img class="align-self-start mr-3" src="{{program.poster}}" alt="{{ program.title }} poster">
         <div class="media-body">
             <h1 class="mt-0 text-light">{{ program.title }}</h1>
-            <p class="text-light">{{ program.summary }}</p>
+            <p class="text-light">{{ program.synopsis }}</p>
             <p class="text-light">Catégorie : {{ program.category.name }}</p>
         </div>
     </div>
+    <ul class="list-group">
+        {% for season in seasons %}
+        <li class="list-group-item"><a href="">{{ season.description }}</a></li>
+        {% endfor %}
+        
+      </ul>
 
     <a href="{{ path('program_index') }}" class="text-light">
         Retour à la liste des programmes
