--- a/templates/program/season_show.html.twig
+++ b/templates/program/season_show.html.twig
@@ -1,13 +1,17 @@
 {% include "base.html.twig" %}
 {% block title %}
-    Seasons
 {% endblock  %}
 
 {% block body %}
     
     
     <h1 class="text-light">{{ season.description }} de <span class="fst-italic">{{ program.title }}</span> </h1>
-    <p class="text-light">{{ program.synopsis }}</p>
-   
-    
+    <h2 class="text-light">Liste des épisodes</h2>
+    {% for episode in episodes %}
+    <ol class="list-group list-group-numbered">       
+       <li class="list-group-numbered text-light">
+           {{ episode.title }}
+       </li>        
+    </ol>
+    {% endfor %} 
 {% endblock  %}
