--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -15,7 +15,7 @@
     </div>
     <ul class="list-group">
         {% for season in seasons %}
-        <li class="list-group-item"><a href="/{programId}/seasons/{seasonId}">{{ season.description }}</a></li>
+        <li class="list-group-item"><a href="{{ path("program_season_show", {"programId": program.id, "seasonId" : season.id}) }}">{{ season.description }}</a></li>
         {% endfor %}
         
       </ul>
