--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <h1 class="text-light">Catégories</h1>
     {% for category in categories %}
-    <a href="/category/{{ category.name }}"><h2 class="text-light">{{ category.name }}</h2> </a>
+    <a href="{{ path("category_show", {"categoryName" : category.name}) }}"><h2 class="text-light">{{ category.name }}</h2> </a>
            
     {% endfor %}
 {% endblock  %}
