création du CRUD Episode and solution

--- a/templates/season/edit.html.twig
+++ b/templates/season/edit.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Edit Season{% endblock %}
 
 {% block body %}
-    <h1>Edit Season</h1>
+    <h1 class="text-light">Edit Season</h1>
 
     {{ include('season/_form.html.twig', {'button_label': 'Update'}) }}
 
