--- a/templates/episode/_form.html.twig
+++ b/templates/episode/_form.html.twig
@@ -1,4 +1,4 @@
 {{ form_start(form) }}
-    <h3 class='text-light'>{{ form_widget(form) }}</h2>
+    <h3 class="text-light">{{ form_widget(form) }}</h2>
     <button class="btn btn-success">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
