--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -13,6 +13,9 @@
             <a class="nav-link" href="#">ACTEURS</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="{{ path('program_index') }}">SERIES</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#">INSCRIPTION</a>
           </li>
           <li class="nav-item">
