--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -10,7 +10,7 @@
             <a class="nav-link hover" aria-current="page" href="/category/">CATEGORIES</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">ACTEURS</a>
+            <a class="nav-link" href="{{ path('actor_index') }}">ACTEURS</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{ path('program_index') }}">SERIES</a>
