--- a/templates/episode/newEpisodeEmail.html.twig
+++ b/templates/episode/newEpisodeEmail.html.twig
@@ -1,6 +1,5 @@
-{% extends "layout.html.twig" %}
+{% extends "layoutEmail.html.twig" %}
 {% block title %}
-    {{ parent() - sending email for new episode created}}
 {% endblock  %}
 {% block body %}
     <h1>New episode {{ episode.title }} created</h1>
