--- a/templates/layoutEmail.html.twig
+++ b/templates/layoutEmail.html.twig
@@ -7,10 +7,17 @@
     <title>{% block title %}
         Creation of a new 
     {% endblock  %}</title>
+    {% block stylesheets %}
+    {{
+      encore_entry_link_tags("app")
+    }}
+    {% endblock %} {% block javascripts %}
+    {{
+      encore_entry_script_tags("app")
+    }}
+    {% endblock %}
 </head>
-<body>
-    {% block body %}
-        
-    {% endblock  %}
+<body class="bg-primary">
+    {% block body %}{% endblock  %}
 </body>
 </html>
