--- a/templates/program/newProgramEmail.html.twig
+++ b/templates/program/newProgramEmail.html.twig
@@ -1,7 +1,8 @@
-{% extends "layoutEmail.twig" %} {% block title %} {{ parent() }} program {%
+{% extends "layoutEmail.html.twig" %} {% block title %} {{ parent() }} program {%
 endblock %} {% block body %}
 <h1>New program {{ program.title }} created</h1>
 <p>
   Hello, the new program {{ program.title }} has been created on Wild Series
 </p>
-<p>Summary : {{ program.summary }} {% endblock %}</p>
+<p>Summary : {{ program.synopsis }} </p>
+{% endblock %}
