--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -19,10 +19,13 @@
             <a class="nav-link" href="#">INSCRIPTION</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="login">CONNECTION</a>
+            <a class="nav-link" href="{{ path('login') }}">CONNECTION</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href={{ path("app_logout") }}>SE DECONNECTER</a>
           </li>
 
         </ul>
       </div>
     </div>
-  </nav>
+</nav>
