--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -18,13 +18,14 @@
           <li class="nav-item">
             <a class="nav-link" href="#">INSCRIPTION</a>
           </li>
-          <li class="nav-item">
+          {% if app.user %}
+            <li class="nav-item">
+              <a href="" class="nav-link">{{ app.user.email }}</a>
+            </li>
+            <a class="nav-link" href="{{ path('app_logout') }}">SE DECONNECTER</a>
+          {% else %}
             <a class="nav-link" href="{{ path('login') }}">CONNECTION</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href={{ path("app_logout") }}>SE DECONNECTER</a>
-          </li>
-
+          {% endif %}
         </ul>
       </div>
     </div>
