--- a/templates/episode/show.html.twig
+++ b/templates/episode/show.html.twig
@@ -26,9 +26,15 @@
         </tbody>
     </table>
 
+    {% if app.user %}
+        <h1 class="text-light">Ajouter un commentaire</h1>
+        {{ render(path('comment_new')) }}
+
+    {% endif %}
+
     <a class='text-light' href="{{ path('episode_index') }}">back to list</a>
 
-    <a  class='text-light' href="{{ path('episode_edit', {'slug': episode.title}) }}">edit</a>
+    <a class='text-light' href="{{ path('episode_edit', {'slug': episode.title}) }}">edit</a>
 
     <h4 class='text-light'>{{ include('episode/_delete_form.html.twig') }}</h4>
 {% endblock %}
