--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -12,16 +12,20 @@
             <p class="text-light">{{ program.synopsis }}</p>
             <h3 class="text-light">Catégorie : {{ program.category.name }}</h3>
         </div>
-        <a class="btn btn-light" href="{{ path( "program_edit", {'id' : program.id}) }}">EDIT</a>
+        {% if is_granted("ROLE_ADMIN") %}
+            <a class="btn btn-light" href="{{ path( "program_edit", {'slug' : program.slug}) }}">EDIT</a>
+        {% endif %}
+
         <a href="{{ path("episode_index") }}" class="btn btn-light">List of episodes</a>
     </div>
-    <h3><strong class = "text-light">Acteurs :</strong></h3>
-      <ul class="list-group">
-          {% for actor in program.actors %}
-              <li class="text-light list-group-item"><a href="{{ path("actor_show", {'id' : actor.id})}}">{{ actor.name }}</a></li>
-          {% else %}
-              <li class="text-danger">Aucun acteur pour cette série</li>
-          {% endfor %}
+    <h3><strong class="text-light">Acteurs :</strong></h3>
+    <ul class="list-group">
+        {% for actor in program.actors %}
+            <li class="text-light list-group-item"><a
+                        href="{{ path("actor_show", {'id' : actor.id}) }}">{{ actor.name }}</a></li>
+        {% else %}
+            <li class="text-danger">Aucun acteur pour cette série</li>
+        {% endfor %}
       </ul>
       <h3><strong class = "text-light">Saisons :</strong></h3>
     <ul class="list-group">
