--- a/templates/comment/_delete_form.html.twig
+++ b/templates/comment/_delete_form.html.twig
@@ -1,5 +1,5 @@
 <form method="post" action="{{ path('comment_delete', {'id': comment.id}) }}"
-      onsubmit="return confirm('Are you sure you want to delete this item?');">
+      onsubmit="return confirm('Voulez-vous supprimer ce commentaire ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('comment' ~ comment.id) }}">
     <button class="btn btn-danger">Supprimer le commentaire</button>
 </form>
