--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -30,11 +30,13 @@
       <h3><strong class = "text-light">Saisons :</strong></h3>
     <ul class="list-group">
         {% for season in seasons %}
-        <li class="list-group-item"><a href="{{ path("program_season_show", {"programId": program.id, "seasonId" : season.id}) }}">{{ season.description }}</a></li>
+            <li class="list-group-item"><a
+                        href="{{ path("program_season_show", {"slug": program.slug, "season_slug" : season.number}) }}">{{ season.description }}</a>
+            </li>
         {% endfor %}
       </ul>
 
-      
+
 
     <a href="{{ path('program_index') }}" class="text-light">
         Retour à la liste des programmes
