--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -15,8 +15,13 @@
     {% else %}
         <h2 class="text-light">Aucune série trouvée.</h2>
     {% endfor %}
+    {#    formulaire de recherche d'une série. #}
+    {{ form_start(form) }}
+    {{ form_widget(form) }}
+    <button class="btn-light">Rechercher une série</button>
+    {{ form_end(form) }}
 
     <a href="{{ path('app_index') }}" class="text-light">
-       Retour à l'accueil
+        Retour à l'accueil
     </a>
 {% endblock %}
