--- a/templates/episode/show.html.twig
+++ b/templates/episode/show.html.twig
@@ -57,7 +57,7 @@
 
     <a class='text-light' href="{{ path('episode_index') }}">back to list</a>
     <p>{{ comment.author }}</p>
-    <a class='text-light' href="{{ path('episode_edit', {'slug': episode.title}) }}">edit</a>
+    <a class='text-light' href="{{ path('episode_edit', {'slug': episode.slug}) }}">edit</a>
     <h4 class='text-light'>{{ include('episode/_delete_form.html.twig') }}</h4>
 
 
