--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -27,18 +27,21 @@
             <li class="text-danger">Aucun acteur pour cette série</li>
         {% endfor %}
       </ul>
-      <h3><strong class = "text-light">Saisons :</strong></h3>
+    <h3><strong class="text-light">Saisons :</strong></h3>
     <ul class="list-group">
         {% for season in seasons %}
             <li class="list-group-item"><a
-                        href="{{ path("program_season_show", {"slug": program.slug, "season_slug" : season.number}) }}">{{ season.description }}</a>
+                        href="{{ path("program_season_show", {"slug": program.slug, "season_number" : season.number}) }}">{{ season.description }}</a>
             </li>
         {% endfor %}
-      </ul>
+    </ul>
 
 
+    <footer class="btn-group my-2">
+        <a href="{{ path('program_index') }}" class="btn btn-info">
+            Retour à la liste des programmes
+        </a>
+        {{ include('program/_delete_form.html.twig') }}
+    </footer>
 
-    <a href="{{ path('program_index') }}" class="text-light">
-        Retour à la liste des programmes
-    </a>
-{% endblock  %}
+{% endblock %}
