--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -55,17 +55,20 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
     <meta name="theme-color" content="#ffffff" />
     {% block stylesheets %}
-    {{
-      encore_entry_link_tags("app")
-    }}
+    {{ encore_entry_link_tags("app") }}
     {% endblock %} {% block javascripts %}
-    {{
-      encore_entry_script_tags("app")
-    }}
-    {% endblock %}
+          {{ encore_entry_script_tags("app") }}
+      {% endblock %}
   </head>
   <header>{% include "_navbar.html.twig" %}</header>
   <body class="bg-primary">
-    {% block body %}{% endblock %}
+  {% for category, messages in app.flashes %}
+      {% for message in messages %}
+          <div class="alert alert-{{ category }}">
+              {{ message }}
+          </div>
+      {% endfor %}
+  {% endfor %}
+  {% block body %}{% endblock %}
   </body>
 </html>
