--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -4,11 +4,12 @@
         {% if program.title == "" %}
         <p class="text-light">Il n'y a aucun programme dans cette categorie</p>
             {% else %}
-            <ul class="list-group">
-                <li class="text-light">{{ program.id }}</li>
-                <li class="list-group-bg list-group-color"><a href="/program/show/{{ program.id }}" class="list-group-item list-group-item-action">{{ program.title }}</a></li>
-                <li class="text-light">{{ program.synopsis }}</li>
-            </ul>
+                <ul class="list-group">
+                    <li class="list-group-bg list-group-color"><a
+                                href="{{ path("program_show", {"slug": program.slug}) }}"
+                                class="list-group-item list-group-item-action">{{ program.title }}</a></li>
+                    <li class="text-light">{{ program.synopsis }}</li>
+                </ul>
         {% endif %}
     {% endfor %}
 {% endblock  %}
