--- a/templates/program/episode_show.html.twig
+++ b/templates/program/episode_show.html.twig
@@ -6,10 +6,12 @@
     <h1 class="text-light">{{ program.title }} - {{ season.number }} season</h1>
     <div class="card">
         <div class="card-body">
-          <h5 class="card-title">Episode {{ episode.number }} </h5>
-          <h6 class="card-subtitle mb-2 text-muted">{{ episode.title }}</h6>
-          <p class="card-text">{{ episode.synopsis }}</p>
-          <a href="{{ path("program_season_show", {"programId" : program.id, "seasonId" : season.id})}}" class="card-link">Retour à la liste des épisodes</a>
+            <h5 class="card-title">Episode {{ episode.number }} </h5>
+            <h6 class="card-subtitle mb-2 text-muted">{{ episode.title }}</h6>
+            <p class="card-text">{{ episode.synopsis }}</p>
+            <a href="{{ path("program_season_show", {"slug" : program.slug, "season_number" : season.number}) }}"
+               class="card-link">Retour à la liste des épisodes</a>
+            {{ include('episode/_delete_form.html.twig') }}
         </div>
-      </div>
-{% endblock  %}
+    </div>
+{% endblock %}
