--- a/templates/program/_delete_form.html.twig
+++ b/templates/program/_delete_form.html.twig
@@ -1,4 +1,5 @@
-<form method="post" action="{{ path('program_delete', {'id': program.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('program_delete', {'id': program.id}) }}"
+      onsubmit="return confirm('Etes vous sûre de vouloir supprimer cette série ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ program.id) }}">
-    <button class="btn btn-danger btn-lg">Delete</button>
+    <button class="btn btn-danger btn-lg">Supprimer la série</button>
 </form>
