--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -12,9 +12,21 @@
             <p class="text-light">{{ program.synopsis }}</p>
             <h3 class="text-light">Catégorie : {{ program.category.name }}</h3>
         </div>
-        {% if is_granted("ROLE_ADMIN") %}
-            <a class="btn btn-light" href="{{ path( "program_edit", {'slug' : program.slug}) }}">EDIT</a>
-        {% endif %}
+        <section class="d-flex flex-lg-row justify-content-start mb-lg-4">
+            {% if is_granted("ROLE_CONTRIBUTOR") %}
+
+                <a class="btn btn-light me-lg-2" href="{{ path( "program_edit", {'slug' : program.slug}) }}">Editer la
+                    série</a>
+
+                {# bouton pour ajouter une série à la liste des favoris #}
+                <a href="{{ path('program_watchlist', {'slug': program.slug}) }}">
+                    <i class="bi {{ app.user.isInWatchList(program) ? 'bi-heart-fill' : 'bi-heart' }} text-info me-lg-2 fs-1"></i>
+                </a>
+            {% endif %}
+            {% if is_granted("ROLE_ADMIN") %}
+                {{ include('program/_delete_form.html.twig') }}
+            {% endif %}
+        </section>
 
         <a href="{{ path("episode_index") }}" class="btn btn-light">List of episodes</a>
     </div>
@@ -37,11 +49,11 @@
     </ul>
 
 
-    <footer class="btn-group my-2">
+
         <a href="{{ path('program_index') }}" class="btn btn-info">
             Retour à la liste des programmes
         </a>
-        {{ include('program/_delete_form.html.twig') }}
-    </footer>
+
+
 
 {% endblock %}
