--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -19,7 +19,7 @@
                     série</a>
 
                 {# bouton pour ajouter une série à la liste des favoris #}
-                <a href="{{ path('program_watchlist', {'slug': program.slug}) }}">
+                <a id="watchlist" href="{{ path('program_watchlist', {'slug': program.slug}) }}">
                     <i class="bi {{ app.user.isInWatchList(program) ? 'bi-heart-fill' : 'bi-heart' }} text-info me-lg-2 fs-1"></i>
                 </a>
             {% endif %}
