--- a/templates/actor/show.html.twig
+++ b/templates/actor/show.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 {% block title %}
-    Acteurs
+    {{ "Acteurs"|trans }}
 {% endblock  %}
 {% block body %}
     <h1 class="text-light text-center">{{ actor.name }}</h1>
