--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -10,6 +10,6 @@
     <div class="col text-light">
         {{ form_row(form.name) }}
     </div>
-<button type="submit">Add category</button>
-{{ form_end(form) }}
-{% endblock %}
+    <button type="submit">{{ "Ajouter une catégorie"|trans }}</button>
+    {{ form_end(form) }}
+    {% endblock %}
