--- a/templates/actor/new.html.twig
+++ b/templates/actor/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Actor{% endblock %}
+{% block title %}{{ 'Nouvel acteur'|trans }}{% endblock %}
 
 {% block body %}
-    <h1 class="text-light text-center">Create new actor</h1>
+    <h1 class="text-light text-center">{{ 'Créer un nouvel acteur'|trans }}</h1>
 
     {{ include('actor/_form.html.twig') }}
 
-    <a class='text-light' href="{{ path('actor_index') }}">back to list</a>
+    <a class='text-light' href="{{ path('actor_index') }}">{{ 'Revenir à la liste'|trans }}</a>
 {% endblock %}
