--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>{% block title %}Welcome !{% endblock %}</title>
+<head>
+    <meta charset="UTF-8"/>
+    <title>{% block title %}Bienvenue !{% endblock %}</title>
     {# Run `composer require symfony/webpack-encore-bundle` and uncomment the
     following Encore helpers to start using Symfony UX #}
-    <link rel="stylesheet" href="/build/app.css" />
-    <img src="{{ asset('build/assets/images') }}" alt="" />
-    <img src="{{ asset('build/assets/images/favicon') }}" alt="" />
+    <link rel="stylesheet" href="/build/app.css"/>
+    <img src="{{ asset('build/assets/images') }}" alt=""/>
+    <img src="{{ asset('build/assets/images/favicon') }}" alt=""/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,700&family=Roboto+Condensed:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,700&family=Roboto+Condensed:ital,wght@0,400;0,700;1,400&display=swap"
+          rel="stylesheet">
     <script src="/build/app.js"></script>
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png" />
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png"/>
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png" />
     <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png" />
@@ -64,8 +65,8 @@
   <body class="bg-primary">
   {% for category, messages in app.flashes %}
       {% for message in messages %}
-          <div class="alert alert-{{ category }}">
-              {{ message }}
+          <div class="alert alert-{{ category|trans }}">
+              {{ message|trans }}
           </div>
       {% endfor %}
   {% endfor %}
