--- a/templates/episode/index.html.twig
+++ b/templates/episode/index.html.twig
@@ -1,24 +1,22 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Episode index{% endblock %}
+{% block title %}{{ "Episodes"|trans }}{% endblock %}
 
 {% block body %}
-    <h1 class='text-light'>Episode index</h1>
+    <h1 class='text-light'>{{ "Liste des épisodes"|trans }}</h1>
 
     <table class="table">
         <thead>
-            <tr>
-                <th class='text-light'>Id</th>
-                <th class='text-light'>Title</th>
-                <th class='text-light'>Number</th>
-                <th class='text-light'>Synopsis</th>
-                <th class='text-light'>actions</th>
-            </tr>
+        <tr>
+            <th class='text-light'>{{ "Titre"|trans }}</th>
+            <th class='text-light'>{{ "Numéro"|trans }}</th>
+            <th class='text-light'>{{ "Résumé"|trans }}</th>
+            <th class='text-light'>{{ "Actions"|trans }}</th>
+        </tr>
         </thead>
         <tbody>
         {% for episode in episodes %}
             <tr>
-                <td class='text-light'>{{ episode.id }}</td>
                 <td class='text-light'>{{ episode.title }}</td>
                 <td class='text-light'>{{ episode.number }}</td>
                 <td class='text-light'>{{ episode.synopsis }}</td>
@@ -29,11 +27,11 @@
             </tr>
         {% else %}
             <tr>
-                <td colspan="5">no records found</td>
+                <td colspan="5">{{ "Aucun enregistrement trouvé"|trans }}</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a class='text-light' href="{{ path('episode_new') }}">Create new</a>
+    <a class='text-light' href="{{ path('episode_new') }}">{{ "Créer un nouvel épisode"|trans }}</a>
 {% endblock %}
