--- a/templates/episode/new.html.twig
+++ b/templates/episode/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Episode{% endblock %}
+{% block title %}{{ "Nouvel épisode"|trans }}{% endblock %}
 
 {% block body %}
-    <h1 class="text-light text-center">Create new Episode</h1>
+    <h1 class="text-light text-center">{{ "Créer un nouvel épisode"|trans }}</h1>
 
     {{ include('episode/_form.html.twig') }}
 
-    <a class='text-light' href="{{ path('episode_index') }}">back to list</a>
+    <a class='text-light' href="{{ path('episode_index') }}">{{ "Retour à la liste"|trans }}</a>
 {% endblock %}
