--- a/templates/episode/newEpisodeEmail.html.twig
+++ b/templates/episode/newEpisodeEmail.html.twig
@@ -2,7 +2,7 @@
 {% block title %}
 {% endblock  %}
 {% block body %}
-    <h1>New episode {{ episode.title }} created</h1>
-    <p>Hello, the episode {{ episode.title }} of has been created</p>
-    <p>summary : {{ episode.synopsis }}</p>
-{% endblock  %}
+    {{ '<h1>Nouvelle épisode {{ episode.title }} créé</h1>'|trans|raw }}
+    {{ "<p>Hello, l'épisode {{ episode.title }} a été créé</p>"|trans|raw }}
+    {{ "<p>résumé : {{ episode.synopsis }}</p>"|trans|raw }}
+{% endblock %}
