--- a/templates/episode/show.html.twig
+++ b/templates/episode/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Episode{% endblock %}
+{% block title %}{{ "Episode"|trans }}{% endblock %}
 
 {% block body %}
     <h1 class='text-light text-center'>Episode</h1>
@@ -55,9 +55,9 @@
 
 
 
-    <a class='text-light' href="{{ path('episode_index') }}">back to list</a>
+    <a class='text-light' href="{{ path('episode_index') }}">{{ "Revenir à la liste"|trans }}</a>
     <p>{{ comment.author }}</p>
-    <a class='text-light' href="{{ path('episode_edit', {'slug': episode.slug}) }}">edit</a>
+    <a class='text-light' href="{{ path('episode_edit', {'slug': episode.slug}) }}">{{ "Editer"|trans }}</a>
     <h4 class='text-light'>{{ include('episode/_delete_form.html.twig') }}</h4>
 
 
