--- a/templates/program/edit.html.twig
+++ b/templates/program/edit.html.twig
@@ -1,14 +1,14 @@
 {% extends "base.html.twig" %}
 {% block title %}
-    edit progam
+    {{ 'Editer une série'|trans }}
 {% endblock  %}
 
 {% block body %}
-<h1 class="text-light text-center">Edit program</h1>
+    <h1 class="text-light text-center">{{ 'Editer une série'|trans }}</h1>
 
-{{ include('program/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('program/_form.html.twig', {'button_label': 'Update'}) }}
 
-<a href="{{ path('program_index') }}">back to list</a>
+    <a href="{{ path('program_index') }}">{{ "Revenir à la liste des séries"|trans }}</a>
 
-{{ include('program/_delete_form.html.twig') }}
-{% endblock  %}
+    {{ include('program/_delete_form.html.twig') }}
+{% endblock %}
