--- a/templates/program/episode_show.html.twig
+++ b/templates/program/episode_show.html.twig
@@ -3,14 +3,14 @@
 {% endblock  %}
 
 {% block body %}
-    <h1 class="text-light">{{ program.title }} - {{ season.number }} season</h1>
+    {{ "<h1 class="text-light">{{ program.title }} - {{ season.number }} saison</h1>"|trans }}
     <div class="card">
         <div class="card-body">
-            <h5 class="card-title">Episode {{ episode.number }} </h5>
+            <h5 class="card-title">{{ "Episode"|trans }} {{ episode.number }} </h5>
             <h6 class="card-subtitle mb-2 text-muted">{{ episode.title }}</h6>
             <p class="card-text">{{ episode.synopsis }}</p>
             <a href="{{ path("program_season_show", {"slug" : program.slug, "season_number" : season.number}) }}"
-               class="card-link">Retour à la liste des épisodes</a>
+               class="card-link">{{ "Retour à la liste des épisodes"|trans }}</a>
             {{ include('episode/_delete_form.html.twig') }}
         </div>
     </div>
