--- a/templates/program/new.html.twig
+++ b/templates/program/new.html.twig
@@ -1,13 +1,13 @@
 {% extends "base.html.twig" %}
 {% block body %}
     {{ form_start(form) }}
-        {{ form_errors(form) }}
-        <div class="row">
-            <div class="col text-light">
-                {{ form_widget(form) }}
-            </div>
+    {{ form_errors(form) }}
+    <div class="row">
+        <div class="col text-light">
+            {{ form_widget(form) }}
         </div>
-        <button type="submit" class="btn btn-danger">Add a program</button>    
+    </div>
+    <button type="submit" class="btn btn-danger">{{ 'Ajouter une série'|trans }}</button>
     {{ form_end(form) }}
-    
-{% endblock  %}
+
+{% endblock %}
