--- a/templates/season/edit.html.twig
+++ b/templates/season/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Season{% endblock %}
+{% block title %}{{ 'Editer une saison'|trans }}{% endblock %}
 
 {% block body %}
-    <h1 class="text-light">Edit Season</h1>
+    <h1 class="text-light">{{ 'Editer une saison'|trans }}</h1>
 
     {{ include('season/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('season_index') }}">back to list</a>
+    <a href="{{ path('season_index') }}">{{ 'Revenir à la liste'|trans }}</a>
 
     {{ include('season/_delete_form.html.twig') }}
 {% endblock %}
