--- a/templates/season/new.html.twig
+++ b/templates/season/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Season{% endblock %}
+{% block title %}{{ 'Nouvelle saison'|trans }}{% endblock %}
 
 {% block body %}
-    <h1 class="text-light">Create new Season</h1>
+    {{ '<h1 class="text-light">Créer une nouvelle saison</h1>'|trans|raw }}
 
     {{ include('season/_form.html.twig') }}
 
-    <a class="text-light" href="{{ path('season_index') }}">back to list</a>
+    <a class="text-light" href="{{ path('season_index') }}">{{ 'Revenir à la liste des saisons'|trans }}</a>
 {% endblock %}
