--- a/templates/season/show.html.twig
+++ b/templates/season/show.html.twig
@@ -1,34 +1,30 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Season{% endblock %}
+{% block title %}{{ 'Saison'|trans }}{% endblock %}
 
 {% block body %}
-    <h1>Season</h1>
+    {{ '<h1>Saison</h1>'|trans|raw }}
 
     <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
-                <td>{{ season.id }}</td>
-            </tr>
-            <tr>
-                <th>Number</th>
+                {{ '<th>Numéro</th>'|trans|raw }}
                 <td>{{ season.number }}</td>
             </tr>
             <tr>
-                <th>Year</th>
+                {{ '<th>Année</th>'|trans|raw }}
                 <td>{{ season.year }}</td>
             </tr>
             <tr>
-                <th>Description</th>
+                {{ '<th>Description</th>'|trans|raw }}
                 <td>{{ season.description }}</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('season_index') }}">back to list</a>
+    <a href="{{ path('season_index') }}">{{ 'Revenir à la liste des saisons'|trans }}</a>
 
-    <a href="{{ path('season_edit', {'id': season.id}) }}">edit</a>
+    <a href="{{ path('season_edit', {'id': season.id}) }}">{{ 'Editer'|trans }}</a>
 
     {{ include('season/_delete_form.html.twig') }}
 {% endblock %}
