--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}{{ 'S\'enregister'|trans }}{% endblock %}
 
 {% block body %}
     <div class="d-flex flex-column justify-content-between">
-        <h1 class="text-light">Register</h1>
+        <h1 class="text-light">{{ 'S\'enregister'|trans }}</h1>
 
         {{ form_start(registrationForm) }}
         <div class="col-6">
@@ -18,7 +18,7 @@
         </div>
 
 
-        <button type="submit" class="btn btn-info">Register</button>
+        <button type="submit" class="btn btn-info">{{ 'S\'enregister'|trans }}</button>
         {{ form_end(registrationForm) }}
     </div>
 
